fix added scrollbar to testimonial

--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -104,7 +104,6 @@
     width: 100%;
     height: 500px;
     position: relative;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -143,7 +142,7 @@
     width: 90%;
     height: 250px;
     border-radius: 200px;
-
+    
     box-sizing: border-box;
     padding: 30px 40px;
     padding-top: 60px;
@@ -158,6 +157,8 @@
     font-style: italic;
     font-weight: 300;
     width: 80%;
+    height: 230px;
+    overflow: auto;
 }
 .review--content h1{
     font-size: 1.5rem;
